# goit-algo2-hw-05

./: bloom_filter.py  pyproject.toml  task1.py  task2.py
