[project]
name = "goit-algo2-hw-05"
version = "0.1.0"
description = ""
authors = [
    {name = "mariashubna",email = "mariashubna@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
